--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.30.1",
+    "googleapis": "^171.4.0",
     "gray-matter": "^4.0.3",
     "next": "^14.2.18",
     "next-mdx-remote": "^6.0.0",
